<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:minHeight="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="54dp">
            </android.support.v7.widget.Toolbar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Event"
                android:id="@+id/textView3"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorTextIcons"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="16dp" />

            <EditText
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eventEditText"
                android:hint="Event Name"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:windowSoftInputMode="stateVisible"/>


            <Button
                android:id="@+id/selectdate"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:textColor="@color/colorTextIcons"
                android:text="Select Date"
                android:layout_below="@+id/eventEditText"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/dateEditText"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date"
                android:layout_below="@+id/selectdate"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:singleLine="false" />

            <Button
                android:id="@+id/selecttime"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/colorTextIcons"
                android:text="Select Time"
                android:layout_below="@+id/dateEditText"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/timeEditText"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Time"
                android:layout_below="@+id/selecttime"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/pickLocationButton"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pick Location"
                android:textSize="16sp"
                android:background="@color/colorPrimaryLight"
                android:textColor="@color/colorTextIcons"
                android:layout_below="@+id/timeEditText"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <AutoCompleteTextView
                android:id="@+id/myLocation"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Location"
                android:inputType="textMultiLine"
                android:layout_below="@+id/pickLocationButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/inviteButton"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Invite Friends"
                android:textSize="16sp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorTextIcons"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:layout_below="@+id/myLocation"/>

            <Button
                android:id="@+id/createButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create Event"
                android:background="@color/colorPrimary"
                android:textSize="20sp"
                android:textColor="@color/colorTextIcons"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/inviteButton"/>

        </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>